trunk/Archive2/1a/e475c7a79d603e/output
main.cpp:9:11: error: 'foo' is a protected member of 'B'
        b.foo = 0;
          ^
main.cpp:3:9: note: can only access this member on an object of type 'D'
    int foo;
        ^
1 error generated.
